# hpc-job-runtime

./: CMakeLists.txt  README.md
include/: common.h  compute.h  mpi_protocol.h  queue.h  server_threads.h  shm.h  socket_utils.h
scripts/: run.sh  run_mpi.sh  run_mpi.slurm
src/client/: client.c
src/server/: mpi_server.c  queue.c  server.c  shm.c  socket_utils.c  user_thread.c
